# HEIGVD_WEB_PROJECT_FRONTEND

./: Makefile  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src/components/: AddSecret.tsx  EditSecret.tsx  SecretList.tsx  SetPIN.tsx  VerifyPIN.tsx
src/components/ui/: input-otp.tsx
src/hooks/: useSecurity.ts
src/lib/: api.ts  crypto.ts  indexedDB.ts  utils.ts
src/pages/: Dashboard.tsx  Home.tsx  SignIn.tsx  SignUp.tsx  Vault.tsx
src/routes/: AppRoutes.tsx
src/types/: secret.ts
src/wasm/crypto/: Cargo.toml  LICENSE_MIT
src/wasm/crypto/src/: lib.rs
